<?xml version="1.0"?>
<package>
  <name>strands_action_domain</name>
  <version>0.0.0</version>
  <description>The strands_action_domain package</description>

  <maintainer email="cburbridge@gmail.com">chris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
	<strands_action_domain action="${prefix}/dummy.yaml"/>
	<strands_action_domain action="${prefix}/dummy2.yaml"/>
  </export>
</package>